[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/HUDCamera.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Fog.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/World.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Transcender.tscn" type="PackedScene" id=4]
[ext_resource path="res://Shaders/Fog_SkyRuins.tres" type="Material" id=5]
[ext_resource path="res://Scenes/BloodMoon.tscn" type="PackedScene" id=6]
[ext_resource path="res://Art/TinyTexture.png" type="Texture" id=7]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0, 0, 0, 1, 0.938462, 0.938462, 0.938462, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 1 )

[sub_resource type="Environment" id=3]
background_mode = 4
glow_enabled = true
glow_levels/2 = true
glow_levels/3 = false
glow_levels/5 = false
glow_intensity = 1.0
glow_strength = 0.95
glow_blend_mode = 0
glow_bicubic_upscale = true
adjustment_contrast = 1.1
adjustment_saturation = 1.5
adjustment_color_correction = SubResource( 4 )

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="Camera" parent="." instance=ExtResource( 1 )]

[node name="Background" type="Node2D" parent="."]

[node name="Chunks" type="Node2D" parent="."]

[node name="Objects" type="YSort" parent="."]

[node name="Transcender" parent="." instance=ExtResource( 4 )]

[node name="BloodMoon" parent="." instance=ExtResource( 6 )]

[node name="Fog" parent="." instance=ExtResource( 2 )]
visible = false
material = ExtResource( 5 )

[node name="FullbrightLight" type="Light2D" parent="."]
scale = Vector2( 100, 100 )
texture = ExtResource( 7 )
texture_scale = 50.0
mode = 2
range_item_cull_mask = 2

[node name="HalfbrightLight" type="Light2D" parent="."]
scale = Vector2( 100, 100 )
texture = ExtResource( 7 )
texture_scale = 50.0
energy = 0.6
mode = 2
range_item_cull_mask = 4

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )
